@@ -61,6 +61,9 @@ IMPROVEMENTS:
   ZOOKEEPER-2040: Server to log underlying cause of SASL connection problems.
   (Steve Loughran via cnauroth)
 
+  ZOOKEEPER-2315: Change client connect zk service timeout log level from Info
+  to Warn level (Lin Yiqun via rgs)
+
 Release 3.5.1 - 07/27/2015
 
 NEW FEATURES:
